# albagrowth

./: README.md
nextjs/: .gitignore  contentlayer.config.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
nextjs/api/: index.py  test_index.py
nextjs/content/case-studies/: grammarly.mdx  growtherapy.mdx  insight-timer.mdx
nextjs/content/members/: andrew.mdx  florian.mdx  kim.mdx  nik.mdx  oksana.mdx  simone.mdx  tash.mdx
nextjs/content/nlp/: taxonomy.mdx
nextjs/content/team/: andrew.mdx  florian.mdx  kim.mdx  nik.mdx  oksana.mdx  simone.mdx  tash.mdx
nextjs/src/app/: layout.tsx  page.tsx
nextjs/src/app/(features)/glossary/: page.tsx
nextjs/src/app/case-studies/: page.tsx
nextjs/src/app/team/: page.tsx
nextjs/src/components/: CaseStudyCards.tsx  Navigation.tsx  TeamCard.tsx  auth-card.tsx  breadcrumbs-responsive.tsx  firebase-providers.tsx  footer.tsx  header.tsx
nextjs/src/components/auth/: modal-forgot-password.tsx  provider-login-buttons.tsx  sign-in-form.tsx  sign-up-form.tsx
nextjs/src/components/props/: CustomHeaderProps.tsx
nextjs/src/components/sections/: HeroSection.tsx  InteractiveSection.tsx  footer.tsx  header.tsx  withLink.tsx
nextjs/src/components/team/: TeamCard.tsx
nextjs/src/components/ui/: avatar.tsx  breadcrumb.tsx  card.tsx  toaster.tsx
nextjs/src/lib/: utils.ts
nextjs/src/types/: types.ts
nextjs/src/utils/: url.ts
python/: .gitignore  pyproject.toml
python/src/: generate_tags.py  main.py
python/src/lib/: math.py
python/tests/lib/: test_math.py
typescript/: .gitignore
(+13 files in other folders)
